# TheDenigifier

./: CMakeLists.txt  README.md  buildscript.sh  main.cpp  mainwindow.cpp  mainwindow.h  ptom.c  ptom.h
